kubernetes/apps/downloads/autobrr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autobrr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: autobrr
  egress:
    # qbittorrent
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    # sonarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP

    # radarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP

    # cross-seed
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cross-seed
      toPorts:
        - ports:
            - port: "2468"
              protocol: TCP
